--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>Login App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="content">
+      <div id="root"></div>
+    </div>
   </body>
 </html>
